# facial-attendance-lambda

./: CMakeLists.txt
include/: DBConnection.h  Objects.h  Update.h
src/: DBConnection.cpp  main.cpp
